Nova gestió de Rols a Generar #178
